--- a/03-advent-of-code-2021/03-binary-diagnostic/03-binary-diagnostic.ipynb
+++ b/03-advent-of-code-2021/03-binary-diagnostic/03-binary-diagnostic.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "5"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -327,6 +327,283 @@
     "You can read more about the choice between EAFP and LBYL in [here](https://mathspp.com/blog/pydonts/eafp-and-lbyl-coding-styles).\n",
     "\n",
     "In our case, we can avoid the debate altogether by initialising the counting dictionary in the appropriate way, like was shown [above](#Convenient-counting)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ## Dictionary with default value\n",
+    "\n",
+    "This whole discussion about initialising the dictionary with the default values, versus using an `if` statement to ensure we can access the dictionary, versus a `try: ... except: ...` block, shows that in all three approaches we needed to give some default value to the dictionary.\n",
+    "\n",
+    "Wouldn't it be great if there was some version of `dict` that assumed a default value?\n",
+    "Well, today is your lucky day, because there is!\n",
+    "\n",
+    "`defaultdict`, from the `collections` module, is what we want.\n",
+    "`defaultdict` behaves just like a regular dictionary, except that you give it a “default value factory”: a function that returns the default values we care about.\n",
+    "\n",
+    "In our case, we see that the count of a digit we haven't seen before should be `0`, so we just need a function that returns `0` to use with `defaultdict`.\n",
+    "As it turns out, `int` does the job:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(int, {})"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "olympic_medals = defaultdict(int)\n",
+    "olympic_medals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "olympic_medals[\"Monu\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice how, above, the dictionary knows that I have zero olympic medals (the default value for any human being), even though I never told the dictionary explicitly how many medals I have.\n",
+    "\n",
+    "We can use a similar thing for our counting:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "749376\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "with open(INPUT_FILE, 'r') as f:\n",
+    "    lines = [line.strip() for line in f]\n",
+    "\n",
+    "gamma, epsilon = \"\", \"\"\n",
+    "for col in range(len(lines[0])):\n",
+    "    counting = defaultdict(int)\n",
+    "\n",
+    "    for line in lines:\n",
+    "        counting[line[col]] += 1\n",
+    "    \n",
+    "    if counting[\"0\"] < counting[\"1\"]:\n",
+    "        gamma += \"1\"\n",
+    "        epsilon += \"0\"\n",
+    "    else:\n",
+    "        gamma += \"0\"\n",
+    "        epsilon += \"1\"\n",
+    "\n",
+    "print(int(gamma, 2) * int(epsilon, 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In our case, because we only had two digits, initialising the dictionary by hand or using `defaultdict` was approximately the same work.\n",
+    "`defaultdict` becomes more useful if we have a lot of different things we might want to count, or if we can't know in advance _what_ things will be counted.\n",
+    "\n",
+    "However, Python has an even _better_ way to count things:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Counter\n",
+    "\n",
+    "The `collections` module has another useful tool for us: a `Counter`!\n",
+    "A `Counter` does exactly what it says on the tin: it counts things:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'i': 4, 's': 4, 'p': 2, 'M': 1})"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "mississippi_letters = Counter(\"Mississippi\")\n",
+    "mississippi_letters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mississippi_letters[\"i\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But it includes other useful methods, like the `most_common`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('i', 4)]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mississippi_letters.most_common(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`Counter`s also have a default value of `0`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mississippi_letters[\"z\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "749376\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "with open(INPUT_FILE, 'r') as f:\n",
+    "    lines = [line.strip() for line in f]\n",
+    "\n",
+    "gamma, epsilon = \"\", \"\"\n",
+    "for col in range(len(lines[0])):\n",
+    "    counting = Counter()\n",
+    "    for line in lines:\n",
+    "        counting[line[col]] += 1\n",
+    "    # Update gamma and epsilon values\n",
+    "    bit, _ = counting.most_common(1)[0]\n",
+    "    if bit == \"0\":\n",
+    "        gamma += \"0\"\n",
+    "        epsilon += \"1\"\n",
+    "    else:\n",
+    "        gamma += \"1\"\n",
+    "        epsilon += \"0\"\n",
+    "\n",
+    "print(int(gamma, 2) * int(epsilon, 2))"
    ]
   },
   {
