--- a/03-advent-of-code-2021/03-binary-diagnostic/03-binary-diagnostic.ipynb
+++ b/03-advent-of-code-2021/03-binary-diagnostic/03-binary-diagnostic.ipynb
@@ -620,6 +620,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is a sample comment"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
