--- a/00-dsa-ml-questions/miscellaneous-questions/sparse-multiplication.ipynb
+++ b/00-dsa-ml-questions/miscellaneous-questions/sparse-multiplication.ipynb
@@ -14,39 +14,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### OPTION 1\n",
+    "```\n",
+    "1. Check if the columns of A is equal to rows of B\n",
+    "    1.1 iterate through rows of matrix A\n",
+    "        1.1.1 iterate through column  of matrix B\n",
+    "            1.1.1.1 iterate through either column of A or Rows of B\n",
+    "            c[i, j] += A[i, k] * B[k, j]\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'  \\nOPTION 1\\n1. Check if the columns of A is equal to rows of B\\n    1.1 iterate through rows of matrix A\\n        1.1.1 iterate through column  of matrix B\\n            1.1.1.1 iterate through either column of A or Rows of B\\n            c[i, j] += A[i, k] * B[k, j]\\n\\n'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 3\n"
+      "[[0, 0, 0], [0, 0, 20]]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(3, 2)"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(3, 2)"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\"  \n",
+    "OPTION 1\n",
+    "1. Check if the columns of A is equal to rows of B\n",
+    "    1.1 iterate through rows of matrix A\n",
+    "        1.1.1 iterate through column  of matrix B\n",
+    "            1.1.1.1 iterate through either column of A or Rows of B\n",
+    "            c[i, j] += A[i, k] * B[k, j]\n",
+    "\n",
+    "\"\"\"\n",
     "matrix_a = [\n",
     "            [0, 2, 0],\n",
     "            [0, -3, 5],\n",
@@ -56,86 +69,177 @@
     "            [0, 0, 0],\n",
     "            [0, 0, 4],\n",
     "        ]\n",
-    "print(len(matrix_a[0]), len(matrix_b))\n",
-    "len(matrix_b[0]), len(matrix_a)\n",
-    "len(matrix_b), len(matrix_a)"
+    "if len(matrix_a[0]) != len(matrix_b):\n",
+    "    print(\"Yes, can not be multiplied\")\n",
+    "\n",
+    "result_matrix = [ [0] * len(matrix_b[0]) for _ in range(len(matrix_a))]\n",
+    "for i in range(len(matrix_a)):\n",
+    "    for j in range(len(matrix_b[0])):\n",
+    "        for k in range(len(matrix_b)):\n",
+    "            result_matrix[i][j] += matrix_a[i][k] * matrix_b[k][j]\n",
+    "\n",
+    "print(result_matrix)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "result_matrix = [ 0 * len(matrix_b[0]) for _ in range(len(matrix_a))]\n",
-    "result_matrix"
+    "### Option 2\n",
+    "OPTION 2 - To avoid multiplying the zero elements, Hence to check it before. This saves us by 80 %\n",
+    "\n",
+    "```\n",
+    "1. Check if the columns of A is equal to rows of B\n",
+    "    1.1 iterate i through rows of matrix A\n",
+    "        1.1.1. iterate k through either column of A or Rows of B\n",
+    "            1.1.1. if Matrix A[i, k] != 0 then : \n",
+    "                1.1.1.1 iterate j through column  of matrix B\n",
+    "                    c[i, j] += A[i, k] * B[k, j]\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'  \\nOPTION 2 - To avoid multiplying the zero elements, Hence to check it before. This saves us by 80 %\\n1. Check if the columns of A is equal to rows of B\\n    1.1 iterate i through rows of matrix A\\n        1.1.1. iterate k through either column of A or Rows of B\\n            1.1.1. if Matrix A[i, k] != 0 then : \\n                1.1.1.1 iterate j through column  of matrix B\\n                    c[i, j] += A[i, k] * B[k, j]\\n\\n'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0  2  0]\n",
-      " [ 0 -3  5]] \n",
-      "\n",
-      " [[ 0 10  0]\n",
-      " [ 0  0  0]\n",
-      " [ 0  0  4]] \n",
-      "\n",
-      "(2, 3) (3, 3) \n",
-      "\n",
-      "Yes, can be multiplied\n",
-      "0\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "index 0 is out of bounds for axis 0 with size 0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[36], line 24\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(matrix_b\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]):\n\u001b[1;32m     22\u001b[0m             \u001b[38;5;66;03m# result_matrix[i][j] += matrix_a[i][k] * matrix_b[k][j]\u001b[39;00m\n\u001b[1;32m     23\u001b[0m             \u001b[38;5;28mprint\u001b[39m(matrix_a[i][k] \u001b[38;5;241m*\u001b[39m matrix_b[k][j])\n\u001b[0;32m---> 24\u001b[0m             \u001b[43mresult_matrix\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m matrix_a[i][k] \u001b[38;5;241m*\u001b[39m matrix_b[k][j]\n\u001b[1;32m     26\u001b[0m             \u001b[38;5;66;03m# result_matrix[i][k] = matrix_a[i][j] * matrix_b[k][j]\u001b[39;00m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;66;03m#print(result_matrix)\u001b[39;00m\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 0 is out of bounds for axis 0 with size 0"
+      "[[0, 0, 0], [0, 0, 20]]\n"
      ]
     }
    ],
    "source": [
-    "from IPython.core.interactiveshell import InteractiveShell\n",
-    "InteractiveShell.ast_node_interactivity = \"all\"\n",
+    "\"\"\"  \n",
+    "OPTION 2 - To avoid multiplying the zero elements, Hence to check it before. This saves us by 80 %\n",
+    "1. Check if the columns of A is equal to rows of B\n",
+    "    1.1 iterate i through rows of matrix A\n",
+    "        1.1.1. iterate k through either column of A or Rows of B\n",
+    "            1.1.1. if Matrix A[i, k] != 0 then : \n",
+    "                1.1.1.1 iterate j through column  of matrix B\n",
+    "                    c[i, j] += A[i, k] * B[k, j]\n",
     "\n",
-    "print(matrix_a.shape, matrix_b.shape, '\\n')\n",
-    "# Output - (2, 3), (3, 3).\n",
+    "\"\"\"\n",
+    "matrix_a = [\n",
+    "            [0, 2, 0],\n",
+    "            [0, -3, 5],\n",
+    "        ]\n",
+    "matrix_b = [\n",
+    "            [0, 10, 0],\n",
+    "            [0, 0, 0],\n",
+    "            [0, 0, 4],\n",
+    "        ]\n",
+    "if len(matrix_a[0]) != len(matrix_b):\n",
+    "    print(\"Yes, can not be multiplied\")\n",
     "\n",
-    "# Check condition if they can be multiplied\n",
-    "if matrix_a.shape[1] == matrix_b.shape[0]:\n",
-    "    print(\"Yes, can be multiplied\")\n",
-    "\n",
-    "    result_matrix = [ 0 * len(matrix_b[0]) for _ in range(len(matrix_a))]\n",
-    "    for i in range(matrix_a.shape[0]):\n",
-    "        for j in range(matrix_b.shape[1]):\n",
-    "            for k in range(matrix_b.shape[0]):\n",
-    "                # result_matrix[i][j] += matrix_a[i][k] * matrix_b[k][j]\n",
-    "                print(matrix_a[i][k] * matrix_b[k][j])\n",
+    "result_matrix = [ [0] * len(matrix_b[0]) for _ in range(len(matrix_a))]\n",
+    "for i in range(len(matrix_a)):\n",
+    "    for k in range(len(matrix_a[0])):\n",
+    "        if matrix_a[i][k] != 0:\n",
+    "            for j in range(len(matrix_b[0])):\n",
     "                result_matrix[i][j] += matrix_a[i][k] * matrix_b[k][j]\n",
     "\n",
-    "                # result_matrix[i][k] = matrix_a[i][j] * matrix_b[k][j]\n",
-    "    #print(result_matrix)"
+    "print(result_matrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Option 3\n",
+    "OPTION 3 - Dictionary of Keys\n",
+    "\n",
+    "```\n",
+    "1. Create a dictionary of non-zero cells of a Matrix\n",
+    "    1. iterate through i rows of Matrx\n",
+    "        1. iterate through j column of Matrix\n",
+    "            1. if Matrix[i, j] != 0\n",
+    "                1. dictionary[(i, j)]\n",
+    "2. iterate i, k in sparse matrix A Keys\n",
+    "    1. iterate j through columns of B\n",
+    "        1. if k, j in sparse matrix B Keys\n",
+    "            1. c[i, j] += Sparse A[i, k] * Sparse B[k, j]\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' \\nOPTION 3 - Dictionary of Keys\\n1. Create a dictionary of non-zero cells of a Matrix\\n    1. iterate through i rows of Matrx\\n        1. iterate through j column of Matrix\\n            1. if Matrix[i, j] != 0\\n                1. dictionary[(i, j)]\\n2. iterate i, k in sparse matrix A Keys\\n    1. iterate j through columns of B\\n        1. if k, j in sparse matrix B Keys\\n            1. c[i, j] += Sparse A[i, k] * Sparse B[k, j]\\n\\n\\n'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0], [0, 0, 20]]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "\"\"\" \n",
+    "OPTION 3 - Dictionary of Keys\n",
+    "1. Create a dictionary of non-zero cells of a Matrix\n",
+    "    1. iterate through i rows of Matrx\n",
+    "        1. iterate through j column of Matrix\n",
+    "            1. if Matrix[i, j] != 0\n",
+    "                1. dictionary[(i, j)]\n",
+    "2. iterate i, k in sparse matrix A Keys\n",
+    "    1. iterate j through columns of B\n",
+    "        1. if k, j in sparse matrix B Keys\n",
+    "            1. c[i, j] += Sparse A[i, k] * Sparse B[k, j]\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
     "def sparse_matrix_multiplication(matrix_a, matrix_b):\n",
-    "    return [[]]"
+    "    # Write your code here.\n",
+    "    if len(matrix_a[0]) != len(matrix_b):\n",
+    "        return [[]]\n",
+    "\n",
+    "    sparse_a = get_dict_of_nonzero_cells(matrix_a)\n",
+    "    sparse_b = get_dict_of_nonzero_cells(matrix_b)\n",
+    "\n",
+    "    matrix_c = [[0] * len(matrix_b[0]) for _ in range(len(matrix_a))]\n",
+    "\n",
+    "    for i, k in sparse_a.keys():\n",
+    "        for j in range(len(matrix_b[0])):\n",
+    "            if (k, j) in sparse_b.keys():\n",
+    "                matrix_c[i][j] += sparse_a[(i, k)] * sparse_b[(k, j)]\n",
+    "    return matrix_c\n",
+    "\n",
+    "def get_dict_of_nonzero_cells(matrix):\n",
+    "    dict_of_nonzero_cells = {}\n",
+    "    for i in range(len(matrix)):\n",
+    "        for j in range(len(matrix[0])):\n",
+    "            if matrix[i][j] != 0:\n",
+    "                dict_of_nonzero_cells[(i, j)] = matrix[i][j]\n",
+    "    return dict_of_nonzero_cells\n",
+    "\n",
+    "sparse_matrix_multiplication(matrix_a, matrix_b)"
    ]
   }
  ],
