--- a/04-dsa-problem-solving/01-static-arrays.ipynb
+++ b/04-dsa-problem-solving/01-static-arrays.ipynb
@@ -190,11 +190,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  LC 26 - Remove duplicates from array - \n",
+    "\n",
+    "Given an integer array nums sorted in non-decreasing order, remove the duplicates in-place such that each unique element appears only once. The relative order of the elements should be kept the same. Then return the number of unique elements in nums.\n",
+    "\n",
+    "Consider the number of unique elements of nums to be k, to get accepted, you need to do the following things:\n",
+    "\n",
+    "Change the array nums such that the first k elements of nums contain the unique elements in the order they were present in nums initially. The remaining elements of nums are not important as well as the size of nums.\n",
+    "\n",
+    "Return k."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def removeDuplicates(self, nums: List[int]) -> int:\n",
+    "        i = 0\n",
+    "        for j in range(1, len(nums)):\n",
+    "            if nums[i] != nums[j]:\n",
+    "                nums[i+1] = nums[j]\n",
+    "                i += 1\n",
+    "        return i+1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### LC 27 - Remove Element \n",
+    "\n",
+    "Given an integer array nums and an integer val, remove all occurrences of val in nums in-place. The order of the elements may be changed. Then return the number of elements in nums which are not equal to val.\n",
+    "\n",
+    "Consider the number of elements in nums which are not equal to val be k, to get accepted, you need to do the following things:\n",
+    "\n",
+    "Change the array nums such that the first k elements of nums contain the elements which are not equal to val. The remaining elements of nums are not important as well as the size of nums.\n",
+    "\n",
+    "Return k."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def removeElement(self, nums: List[int], val: int) -> int:\n",
+    "        k = 0\n",
+    "        for i in range(len(nums)):\n",
+    "            if nums[i] != val:\n",
+    "                nums[k] = nums[i]\n",
+    "                k += 1\n",
+    "        return k"
+   ]
   },
   {
    "cell_type": "code",
