Add the leetcode for static array

--- a/04-dsa-problem-solving/01-static-arrays.ipynb
+++ b/04-dsa-problem-solving/01-static-arrays.ipynb
@@ -238,9 +238,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' \\nwhile val in nums:\\n    x=nums.remove(val)\\nreturn len(nums)  \\n '"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Solution:\n",
     "    def removeElement(self, nums: List[int], val: int) -> int:\n",
@@ -249,7 +260,13 @@
     "            if nums[i] != val:\n",
     "                nums[k] = nums[i]\n",
     "                k += 1\n",
-    "        return k"
+    "        return k\n",
+    "    \n",
+    "''' \n",
+    "while val in nums:\n",
+    "    x=nums.remove(val)\n",
+    "return len(nums)  \n",
+    " '''"
    ]
   },
   {
