wip dynamic arrays

--- a/04-dsa-problem-solving/01-static-arrays.ipynb
+++ b/04-dsa-problem-solving/01-static-arrays.ipynb
@@ -271,6 +271,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "1\n",
+      "1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 1, 1, 2, 1]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [1, 2, 1]\n",
+    "n = len(nums)\n",
+    "ans = [0] * (2 * len(nums))\n",
+    "for i in range(len(nums)):\n",
+    "    ans[i] = nums[i]\n",
+    "    ans[i + n] = nums[i]\n",
+    "ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 1, 1, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1, 2, 1]\n",
+    "ans = []\n",
+    "for i in range(2):\n",
+    "    for n in nums:\n",
+    "        ans.append(n)\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
