--- a/04-dsa-problem-solving/04-linked-list.ipynb
+++ b/04-dsa-problem-solving/04-linked-list.ipynb
@@ -150,11 +150,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [LC 21 - Merge two sorted list](https://leetcode.com/problems/merge-two-sorted-lists/description/)\n",
+    "\n",
+    "You are given the heads of two sorted linked lists list1 and list2.\n",
+    "\n",
+    "Merge the two lists into one sorted list. The list should be made by splicing together the nodes of the first two lists.\n",
+    "\n",
+    "Return the head of the merged linked list.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def mergeTwoLists(self, list1: Optional[ListNode], list2: Optional[ListNode]) -> Optional[ListNode]:\n",
+    "        dummy = node = ListNode()\n",
+    "\n",
+    "        while list1 and list2:\n",
+    "            if list1.val < list2.val:\n",
+    "                node.next = list1\n",
+    "                list1 = list1.next\n",
+    "            else:\n",
+    "                node.next = list2\n",
+    "                list2 = list2.next\n",
+    "            node = node.next\n",
+    "        \n",
+    "        node.next = list1 or list2\n",
+    "\n",
+    "        return dummy.next\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def mergeTwoLists(self, list1: Optional[ListNode], list2: Optional[ListNode]) -> Optional[ListNode]:\n",
+    "        if not list1:\n",
+    "            return list2\n",
+    "        if not list2:\n",
+    "            return list1\n",
+    "        lil, big = (list1, list2) if list1.val < list2.val else (list2, list1)\n",
+    "        lil.next = self.mergeTwoLists(lil.next, big)\n",
+    "        return lil"
+   ]
   }
  ],
  "metadata": {
